--- a/Exercicios Limpos YouTube API v3/index.html
+++ b/Exercicios Limpos YouTube API v3/index.html
@@ -36,10 +36,12 @@
             div#janela ul li.principal div.foto div.legenda {
               position: absolute;
               top: 150px; left: 0;
-              width: 320px; height: 150px;
+              width: 3100px; height: 150px;
+                padding: 5px;
               z-index: 2;
               cursor: pointer;
               background-color: rgba(0, 0, 0, 0.7);
+                
               -webkit-transition: all 0.5s ease-out 0s;
               -moz-transition: all 0.5s ease-out 0s;
               -ms-transition: all 0.5s ease-out 0s;
@@ -47,7 +49,7 @@
               transition: all 0.5s ease-out 0s;
             }
 
-            div#janela ul li.principal div.foto div.legenda: hover {
+            div#janela ul li.principal div.foto div.legenda:hover {
               top: 100px;
 
             }
