--- a/Exercicios Limpos YouTube API v3/index.html
+++ b/Exercicios Limpos YouTube API v3/index.html
@@ -61,6 +61,14 @@
               color: aqua;
               margin:0;
             }
+            
+            div#janela ul li.principal div.foto div.legenda p {
+                font-family: sans-serif;
+                text-transform: lowercase;
+                font-weight: 100;
+                color: white;
+                margin: 0;
+            }
 
         </style>
         <script src="js/jquery.js"></script>
