--- a/Exercicios Limpos YouTube API v3/index.html
+++ b/Exercicios Limpos YouTube API v3/index.html
@@ -75,14 +75,17 @@
         <script src="js/meuscript.js"></script>
         <script  src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js" type="text/javascript"></script>
         <!--<script src="meusjavascript/jquery-2.1.3.min.js" type="text/javascript"></script>-->
-
+        <!-- Scripst do Fancybox-->
+        <script src="fancy/jquery.fancybox.js" type="text/javascript"></script>
+        <link href="fancy/jquery.fancybox.css" media="screen" rel="stylesheet" type="text/css"/>
+        <script src="fancy/jquery.fancybox-media.js" type="text/javascript"></script>
+        
     </head>
     <html>
         <div id="janela">
             <ul>
 
             </ul>
-        </div>
-
+        </div>        
     </html>
 </html>
