--- a/Exercicios Limpos SEO na Pratica/index.html
+++ b/Exercicios Limpos SEO na Pratica/index.html
@@ -14,11 +14,11 @@
     	<nav id="menu_desktop">
     	  <ul>
     	    <li><a href="index.html">Home </a></li>
-    	    <li><a href="info.html">Info</a></li>
-    	    <li><a href="special_events.html">Special Events</a></li>
-    	    <li><a href="dvd.html">DVD</a></li>
-    	    <li><a href="location.html">Location</a></li>
-    	    <li><a href="menu.html">Menu</a></li>
+    	    <li><a href="info/index.html">Info</a></li>
+    	    <li><a href="eventos/index.html">Special Events</a></li>
+    	    <li><a href="dvd/index.html">DVD</a></li>
+    	    <li><a href="local/index.html">Location</a></li>
+    	    <li><a href="menu/index.html">Menu</a></li>
     	    <li><a href="review.html">Review</a></li>
   	      </ul>
     	</nav>
