--- a/Exercicios Limpos SEO na Pratica/info/index.html
+++ b/Exercicios Limpos SEO na Pratica/info/index.html
@@ -13,13 +13,13 @@
 	<header></header>
     	<nav id="menu_desktop">
     	  <ul>
-    	    <li><a href="index.html">Home </a></li>
-    	    <li><a href="info.html">Info</a></li>
-    	    <li><a href="special_events.html">Special Events</a></li>
-    	    <li><a href="dvd.html">DVD</a></li>
-    	    <li><a href="location.html">Location</a></li>
-    	    <li><a href="menu.html">Menu</a></li>
-    	    <li><a href="review.html">Review</a></li>
+    	    <li><a href="../index.html">Home </a></li>
+    	    <li><a href="index.html">Info</a></li>
+    	    <li><a href="../eventos/index.html">Special Events</a></li>
+    	    <li><a href="../dvd/index.html">DVD</a></li>
+    	    <li><a href="../local/index.html">Location</a></li>
+    	    <li><a href="../menu/index.html">Menu</a></li>
+    	    <li><a href="../depoimentos/index.html">Review</a></li>
   	      </ul>
     	</nav>
         
@@ -52,7 +52,7 @@
                 </ul>
                 <p>SPECIAL FEATURE: Cafe Townsend serves only the very highest quality meats, authentically prepared for your dining pleasure. A specialty at Cafe Townsend is the signature dishes that are presented tableside. Dine in our elegantly casual atmosphere at our convenient San Francisco location.</p>
                 <h3>Cafe Townsend Is Proud To Offer The Following Services</h3>
-                <p>BANQUET FACILITIES / PRIVATE ROOM: We can accommodate your party of up to 34 (50 for standing receptions) in our private dining room with Roman motif and gold and peach accents. This room offers soundproof doors and lighting that will adjust from candlelight to reading luminance. In addition, we have semi-private accommodations, seating up to 50, in one section of our main dining room that can be separated by curtains. For groups of 100 to 120 our main dining room is available. Cafe Townsend will also consider closing the restaurant for a minimum charge to provide the space you need to accommodate your largest parties. See our Special Events page for more details.</p>
+                <p>BANQUET FACILITIES / PRIVATE ROOM: We can accommodate your party of up to 34 (50 for standing receptions) in our private dining room with Roman motif and gold and peach accents. This room offers soundproof doors and lighting that will adjust from candlelight to reading luminance. In addition, we have semi-private accommodations, seating up to 50, in one section of our main dining room that can be separated by curtains. For groups of 100 to 120 our main dining room is available. Cafe Townsend will also consider closing the restaurant for a minimum charge to provide the space you need to accommodate your largest parties. See our <a href="../eventos/index.html">Special Events page </a>for more details.</p>
                 <ul>
                   <li>BAR: Cafe Townsend offers a full service bar. In addition, we have three frozen specialty drinks. For a special occasion, try the Belini, a combination of peach nectar, champagne and Bacardi.</li>
                   <li>CATERING: Both on and off premise catering is available. See the Special Events page for more details.</li>
