--- a/Exercicios Limpos SEO na Pratica/info/index.html
+++ b/Exercicios Limpos SEO na Pratica/info/index.html
@@ -3,6 +3,11 @@
 	<head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=devide-width,initial-scale=1">
+        <meta name="geo.region" content="BR-RJ" />
+        <meta name="geo.placename" content="Rio de Janeiro" />
+        <meta name="geo.position" content="-22.855993;-43.319581" />
+        <meta name="ICBM" content="-22.855993, -43.319581" />
+
         <title>Café Fontenebleau</title>
         <link href="layout.css" rel="stylesheet" type="text/css">
 		<link href="tipografia.css" rel="stylesheet" type="text/css">
