--- a/Exercicios Limpos HTML5 advanced/unidade02/ex02_svg.html
+++ b/Exercicios Limpos HTML5 advanced/unidade02/ex02_svg.html
@@ -1,13 +1,28 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <title>Curso HTML5 Avançado</title>    
-    </head>
-    
-    <body>
-        <svg height="500" width="500">
-            
-        </svg>
-	</body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Curso HTML5 Avançado</title>
+    <!-- <style>
+        rect {
+            width: 200px;
+            height: 200px;
+        }
+    </style> -->
+  </head>
+
+  <body>
+    <svg height="500" width="500">
+      <rect x="60" y="60" width="200" height="200" fill="red" rx="20"></rect>
+      <rect
+        x="120"
+        y="120"
+        width="200"
+        height="200"
+        fill="blue"
+        rx="20"
+        fill-opacity="0.6"
+      ></rect>
+    </svg>
+  </body>
 </html>
